Add Gradle instructions for Java 9+